# MindNote

./: .gitignore  CMakeLists.txt  settings.gradle.kts
Desktop/: CMakeLists.txt
Desktop/Workspaces/guest/space1/: workspace.json
Desktop/Workspaces/users/SHINDA/space1/: workspace.json
Desktop/drawio_xml_export/: ApiClient.drawio.xml  ApiClient_syncUserWorkspaces.drawio.xml  ApiClient_syncWorkspace.drawio.xml  AuthManager_login.drawio.xml  AuthManager_logout.drawio.xml  Element_deserialize.drawio.xml  Element_serialize.drawio.xml  LocalStorage_loadWorkspace.drawio.xml  LocalStorage_saveWorkspace.drawio.xml  SettingsManager_loadSettings.drawio.xml  SettingsManager_saveSettings.drawio.xml  SyncManager_showConflictDialog.drawio.xml  SyncManager_sync.drawio.xml  WorkspaceController_createSubWorkspace.drawio.xml  WorkspaceController_createWorkspace.drawio.xml  WorkspaceController_deserialize.drawio.xml  WorkspaceController_loadWorkspaces.drawio.xml  WorkspaceController_removeWorkspace.drawio.xml  WorkspaceController_saveWorkspaces.drawio.xml  WorkspaceController_serialize.drawio.xml  Workspace_addItem.drawio.xml  Workspace_deserialize.drawio.xml  Workspace_removeItem.drawio.xml  Workspace_serialize.drawio.xml
Desktop/plantuml_functions/: full_class_diagram.puml
Desktop/resources/: resources.qrc
Desktop/src/: CMakeLists.txt  error_handler.cpp  error_handler.h  local_storage.cpp  local_storage.h  mainwindow.cpp  mainwindow.h  sync_manager.cpp  sync_manager.h  user_sync_dialog.cpp  user_sync_dialog.h
Desktop/src/api/: api_client.cpp  api_client.h  auth_manager.cpp  auth_manager.h
Desktop/src/data/: workspace.cpp  workspace.h
Desktop/src/data/elements/: SubspaceLinkItem.cpp  SubspaceLinkItem.h  abstract_workspace_item.h  checkbox_item.cpp  checkbox_item.h  file_item.cpp  file_item.h  image_item.cpp  image_item.h  list_item.cpp  list_item.h  nested_workspace_item.h  resizable_item.cpp  resizable_item.h  text_item.cpp  text_item.h  title_item.cpp
Desktop/src/logic/: workspace_controller.cpp  workspace_controller.h
Desktop/src/settings/: settings_manager.cpp  settings_manager.h
Desktop/src/theme/: styles.cpp  styles.h  theme_manager.cpp  theme_manager.h
Desktop/src/view/: auth_dialog.cpp  auth_dialog.h  editor_widget.cpp  editor_widget.h  left_panel.cpp  left_panel.h  main_widget.cpp  main_widget.h  settings_dialog.cpp  settings_dialog.h
Django/myproject/myproject/: settings.py
Django/myproject/notes/: admin.py  models.py
MobileApp/: settings.gradle.kts
MobileApp/app/: build.gradle  build.gradle.kts
MobileApp/app/src/main/: AndroidManifest.xml
MobileApp/gradle/: libs.versions.toml
MobileApp/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
backend/: MindNote Backend API.postman_test_run.json  MindNoteBackend.postman_collection.json  requirements.txt
backend/api/: serializers.py  urls.py  views.py
backend/backend/: settings.py  urls.py
backend/users/: admin.py  models.py
backend/users/migrations/: 0001_initial.py
backend/workspaces/: admin.py  local_storage.py  models.py  urls.py
backend/workspaces/migrations/: 0001_initial.py  0002_alter_page_link.py  0002_page_icon.py  0003_page_parent.py  0004_remove_page_parent.py
backend/workspaces/user/asdqwdasdqwdqwdqwdqwdqw/: metadata.json
gradle/wrapper/: gradle-wrapper.properties
src/: local_storage.cpp  mainwindow.cpp  sync_manager.cpp  sync_manager.h
src/api/: api_client.cpp  api_client.h  auth_manager.cpp
src/data/: workspace.cpp  workspace.h  workspaces_model.cpp  workspaces_model.h
src/data/elements/: abstract_workspace_item.h  checkbox_item.cpp  checkbox_item.h  file_item.cpp  file_item.h  image_item.cpp  image_item.h  list_item.cpp  list_item.h  nested_workspace_item.cpp  nested_workspace_item.h  resizable_item.cpp  resizable_item.h  text_item.cpp  text_item.h  title_item.cpp  title_item.h
src/logic/: workspace_controller.cpp  workspace_controller.h
src/view/: auth_dialog.cpp  auth_dialog.h  editor_widget.cpp  editor_widget.h  left_panel.cpp  left_panel.h  main_widget.cpp  main_widget.h
(+115 files in other folders)
